--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+      "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +45,8 @@
       "last 1 safari version"
     ]
   },
- "homepage": "https://ehdal53539-design.github.io/camp"
-
+  "homepage": "https://ehdal53539-design.github.io/camp",
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  }
 }
